--- a/gsi-parametros.sty
+++ b/gsi-parametros.sty
@@ -1,8 +1,8 @@
 
 \newcommand{\modo}[1][]{}
 %\renewcommand{\modo}{ASC} % DESCOMENTAR LINEA CORRECTA
-%\renewcommand{\modo}{MASTER-ESPACIO} 
-\renewcommand{\modo}{VIDEOJUEGOS} 
+\renewcommand{\modo}{MASTER-ESPACIO} 
+%\renewcommand{\modo}{VIDEOJUEGOS} 
 %\renewcommand{\modo}{INDUSTRIALES} 
 
 % Iniciamos variables con valores vacios
