Navigation bar issue solved

--- a/robotics/robotics.tex
+++ b/robotics/robotics.tex
@@ -44,7 +44,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Descomentar para habilitar barra de navegación superior
-\ponerNavegacion
+\setNavigation
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -80,9 +80,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Use this block for a blue title slide with modified footline
 {\titlepageBlue
-    \setbeamertemplate{headline}{}
-	\setbeamercolor{frametitle}{bg=black}
-	\setbeamercolor{normal text}{bg=black}
     \begin{frame}
         \titlepage
     \end{frame}
@@ -101,7 +98,7 @@
 \end{frame}
 
 {
-\eliminarNavegacion
+\disableNavigation{white}
 \begin{frame}[shrink]{Table of Contents}
  \frametitle{Table of Contents}
  \tableofcontents
