--- a/aivideogames/aivideogames.tex
+++ b/aivideogames/aivideogames.tex
@@ -47,7 +47,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Descomentar para habilitar barra de navegación superior
-\ponerNavegacion
+\setNavigation
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -83,9 +83,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Use this block for a blue title slide with modified footline
 {\titlepageBlue
-    \setbeamertemplate{headline}{}
-	\setbeamercolor{frametitle}{bg=black}
-	\setbeamercolor{normal text}{bg=black}
     \begin{frame}
         \titlepage
     \end{frame}
@@ -105,7 +102,7 @@
 \end{frame}
 
 {
-\eliminarNavegacion
+\disableNavigation{white}
 \begin{frame}[shrink]{Table of Contents}
  \frametitle{Table of Contents}
  \tableofcontents
