--- a/aivideogames/aivideogames.tex
+++ b/aivideogames/aivideogames.tex
@@ -39,9 +39,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Presentation Info
 \title[AI in videogames]{AI in videogames}
-\author{}
-\institute{\asignatura}
-\date{}
+\author{\asignatura\\\carrera}
+\institute{}
+\date{Departamento de Automática}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
