Issue with syntax highlighting solved

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -34,9 +34,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Presentation Info
 \title[Introduction to Aritificial Intelligence]{Introduction to Artificial Intelligence}
-\author{}
-\institute{\asignatura}
-\date{}
+\author{\asignatura\\\carrera}
+\institute{}
+\date{Departamento de Automática}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
