Issue with syntax highlighting solved

--- a/robotics/robotics.tex
+++ b/robotics/robotics.tex
@@ -36,9 +36,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Presentation Info
 \title[Introduction to Robotics]{Introduction to Robotics}
-\author{}
-\institute{\asignatura}
-\date{}
+\author{\asignatura\\\carrera}
+\institute{}
+\date{Departamento de Automática}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
