--- a/pybrain/pybrain.tex
+++ b/pybrain/pybrain.tex
@@ -409,7 +409,7 @@ Class \texttt{ClassificationDataSet}
  	   \column{.50\textwidth}
 	Handwritting recognition
 	\begin{enumerate}
-		\item Download the dataset from \url{https://atc1.aut.uah.es/~david/ex3data1.mat}
+		\item Download the dataset (\texttt{ex3data1.mat}) from \url{https://github.com/dfbarrero/aiCourse/tree/master/pybrain/datasets}
 		\item Load dataset using the code shown in the next slide
 		\item Complete the code to train and validate the neural network
 	\end{enumerate}
