--- a/mlfoundations/mlfoundations.tex
+++ b/mlfoundations/mlfoundations.tex
@@ -1104,6 +1104,36 @@
     \end{columns}
 \end{frame}
 
+\subsection{Case study 4: Fall detection}
+\begin{frame}{Case studies}{Case study 4: Fall detection}
+    \begin{columns}
+ 	   \column{.50\textwidth}
+	   \small{
+		Client
+		\begin{itemize}
+			\item Technological start-up
+		\end{itemize}
+		Bussness problem
+		\begin{itemize}
+			\item Detect falls with a smartwatch
+			\item Improve elderly people attention
+		\end{itemize}
+		Data
+		\begin{itemize}
+			\item None
+		\end{itemize}
+		Propose a solution to:
+		\begin{itemize}
+			\item Data adquisition
+			\item ML task
+			\item Data preprocessing
+			\item Model explotation
+			\item Model maintenance
+		\end{itemize}
+		}
+ 	   \column{.50\textwidth}
+    \end{columns}
+\end{frame}
 
 \section{Main challenges of Machine Learning}
 
