--- a/ann/ann.tex
+++ b/ann/ann.tex
@@ -250,7 +250,7 @@
 		\end{description}
 
  	   \column{.30\textwidth}
-	   \begin{block}{Neuron model}
+	   \begin{block}{Neuron model (perceptron)}
 	   \vspace{-0.5cm}
 	   \begin{equation*}
 	   y=g\left( \sum_{i=1}^n w_{i} a_i \right)
