ANN slides with new compilation system

--- a/ann/ann.tex
+++ b/ann/ann.tex
@@ -94,6 +94,8 @@
     \end{frame}
 }
 
+\institute{\asignatura}
+
 \begin{frame}[plain]{}
    \begin{block}{Objectives}
       \begin{enumerate}
@@ -124,30 +126,30 @@
 
 \section{Introduction}
 
-\subsection{Machine Learning tasks}
-\begin{frame}{Introduction}{Machine Learning (I)}
-	Machine Learning studies how to build data-driven models
-	\begin{itemize}
-	\item \textbf{Supervised learning} The dataset contains output examples
-	\begin{flushleft}
-		\begin{itemize}
-		\item \textbf{Classification} The output is a category
-		\item \textbf{Regression} The output is a number
-		\end{itemize}
-		\end{flushleft}
-	\item \textbf{Unsupervised learning} (or \textit{clustering}) The dataset does not contain output examples
-	\item \textbf{Reinforcement learning} Maximize reward
-	\end{itemize}
-	ML is data-driven
-\end{frame}
+%\subsection{Machine Learning tasks}
+%\begin{frame}{Introduction}{Machine Learning (I)}
+%	Machine Learning studies how to build data-driven models
+%	\begin{itemize}
+%	\item \textbf{Supervised learning} The dataset contains output examples
+%	\begin{flushleft}
+%		\begin{itemize}
+%		\item \textbf{Classification} The output is a category
+%		\item \textbf{Regression} The output is a number
+%		\end{itemize}
+%		\end{flushleft}
+%	\item \textbf{Unsupervised learning} (or \textit{clustering}) The dataset does not contain output examples
+%	\item \textbf{Reinforcement learning} Maximize reward
+%	\end{itemize}
+%	ML is data-driven
+%\end{frame}
 
-\begin{frame}[plain]{Introduction}{Machine Learning (II)}
-	\note{Comparar data-driven con programacion clasica}
-	\begin{center}
-	\vspace{-0.3cm}
-		\includegraphics[width=0.44\linewidth]{figs/lifecycle.png}
-	\end{center}
-\end{frame}
+%\begin{frame}[plain]{Introduction}{Machine Learning (II)}
+%	\note{Comparar data-driven con programacion clasica}
+%	\begin{center}
+%	\vspace{-0.3cm}
+%		\includegraphics[width=0.44\linewidth]{figs/lifecycle.png}
+%	\end{center}
+%\end{frame}
 
 
 \subsection{History}
