--- a/ea/ea.tex
+++ b/ea/ea.tex
@@ -224,7 +224,7 @@
   	\end{itemize}
 \end{frame}
 
-\IfStrEq{\modo}{MASTER-INDUSTRIALES}{
+\IfStrEq{\modo}{muii}{
 \begin{frame}{Genetic Algorithms}{Representation: Floating point (II)}
 	\vspace{-0.2cm}
 
